--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-    <div class="fullscreen nopadding">
+    <div class="fullscreen nopadding" style="background-color: red;">
         <div id="header">
           <ul>
             <li><a href="index.html"><b>Home</b></a></li>
